--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "gulp-mocha": "^3.0.1",
     "gulp-sass": "^2.3.2",
     "gulp-uglify": "^2.0.1",
+    "jsdom": "^9.9.1",
     "mocha": "^3.2.0",
+    "mocha-jsdom": "^1.1.0",
     "sinon": "^1.17.7",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
