--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "gulp-mocha": "^3.0.1",
     "gulp-sass": "^2.3.2",
     "gulp-uglify": "^2.0.1",
+    "jsdom": "^9.10.0",
+    "jsdom-global": "^2.1.1",
     "mocha": "^3.2.0",
     "sinon": "^1.17.7",
     "vinyl-buffer": "^1.0.0",
