--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gulp-autoprefixer": "^3.1.1",
     "gulp-imagemin": "^3.1.1",
     "gulp-mocha": "^3.0.1",
+    "gulp-mocha-phantomjs": "^0.12.0",
     "gulp-sass": "^2.3.2",
     "gulp-uglify": "^2.0.1",
     "mocha": "^3.2.0",
