--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
     "gulp-autoprefixer": "^3.1.1",
     "gulp-imagemin": "^3.1.1",
     "gulp-mocha": "^3.0.1",
-    "gulp-mocha-phantomjs": "^0.12.0",
+    "gulp-mocha-phantomjs": "git://github.com/mrhooray/gulp-mocha-phantomjs.git#a315e0fcc50abed0c58f64c444d2599888d453a7",
     "gulp-sass": "^2.3.2",
     "gulp-uglify": "^2.0.1",
     "mocha": "^3.2.0",
     "sinon": "^1.17.7",
+    "source-map-support": "^0.4.11",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
   },
