--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gulp-sass": "^2.3.2",
     "gulp-uglify": "^2.0.1",
     "mocha": "^3.2.0",
+    "mochify": "^2.18.1",
     "sinon": "^1.17.7",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
