--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "sauce-connect-launcher": "^1.2.2",
     "selenium-webdriver": "^3.1.0",
     "sinon": "^1.17.7",
+    "stream-array": "^1.1.2",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.9.0"
