--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,3 +29,20 @@ jobs:
         
       # run tests!
       - run: yarn test
+
+      - run:
+          name: "End-to-End Tests"
+          command: |
+            # Start test server
+            yarn start &
+            SERVER_PID=$!
+            # ...and wait for it to be ready
+            wget --retry-connrefused --no-check-certificate -T 60 localhost:3000
+
+            # Actually do the tests
+            yarn web-tests:browserstack
+            EXIT_CODE=$?
+
+            # Stop server
+            kill -9 $SERVER_PID
+            exit $EXIT_CODE
