Enable colors for end-to-end tests on Circle

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,6 +33,8 @@ jobs:
       - run:
           name: "End-to-End Tests"
           command: |
+            export FORCE_COLOR=1
+            
             # Start test server
             yarn start &
             SERVER_PID=$!
