--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,7 +44,7 @@ jobs:
             wget --retry-connrefused --no-check-certificate -T 60 localhost:3000
 
             # Actually do the tests
-            yarn web-tests:browserstack
+            yarn run web-tests:browserstack
             EXIT_CODE=$?
 
             # Stop server
