--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,7 +41,9 @@ jobs:
             yarn start &
             SERVER_PID=$!
             # ...and wait for it to be ready
-            wget --retry-connrefused --no-check-certificate -T 60 localhost:3000
+            echo 'Polling server until ready...'
+            wget --retry-connrefused --no-check-certificate --no-verbose -T 60 localhost:3000
+            echo ''
 
             # Actually do the tests
             yarn run web-tests:browserstack
